			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2747 2005/04/14 06:22:31 suz Exp $

<200504>
2005-04-14  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet/in_msf.c freebsd5/contrib/pf/net/if_pfsync.c,
	  freebsd5/sys/netinet/igmp.c, igmp_var.h, in.c, in_pcb.c, in_var.h,
	  ip_output.c: reflect the following MLDv2 changes into the FreeBSD5's
	  IGMPv3 implementation.
	- fixs a kernel crash by an IGMPv3 Query (2005-01-01)
	- retransmits IGMPv3 report RobustnessVariable times (2004-12-31)
	- corrects an MLD-query handling when MaxResponseCode=0 (2004-12-27)
	- introduces a sysctl option to force IGMP version (2004-07-09)
	- renames IGMPv3-ready in_multi{} manipulation functions (2004-02-05)

	* freebsd5/sys/netinet/ip_output.c: specifies spl()s as done in 
	  original FreeBSD5

	* kame/*: remove freebsd[234]-specific code, since they are no longer
	  supported in KAME-SNAP

2005-04-05  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sys/ufs/ffs/ffs_inode.c: FreeBSD Security Advisory
	 FreeBSD-SA-05:02.sendfile

2005-04-04  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet6/nd6.c: when the number of the packets queued in
	  a NDP cache exceed the limit, discard the oldest packet, 
	  as specified in RFC2461 7.2.2.

2005-04-01  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/netinet/icmp6.h, kame/sys/netinet6/icmp6.c, nd6.c: limits 
	the number of unresolved packets stored in a NDP cache.
	(To prevent a DoS attack using 2005-01-21's change)

2005-04-01  SUZUKI, Shinsuke <suz@kame.net>
	* kame/kame/rtadvd/configc, rtadvd.[ch]: reflect router-variables
	in RA configuration into host-variables in kernel.

<200503>
2005-03-30  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/addrconf.c (update_address): make sure that
	the lifetimes of addresses are updated when the client receives a
	Reply in response to Renew or Rebind.

2005-03-23  SUZUKI, Shinsuke <suz@kame.net>
	* kame/sys/net/if_ist.c: added a sanity check for the IPv4 address 