@@ -1039,7 +1039,7 @@ in_addmulti2(ap, ifp, numsrc, ss, mode, init, error)
 		 * count. just return if group address is not the target of 
 		 * IGMPv3 (i.e. 224.0.0.0/24)
 		 */
-		if (IN_LOCAL_GROUP(SIN_ADDR(ifma->ifma_addr))) {
+		if (IN_LOCAL_GROUP(ntohl(ap->s_addr))) { 
 			splx(s);
 			return inm;
 		}
@@ -1152,7 +1152,7 @@ in_addmulti2(ap, ifp, numsrc, ss, mode, init, error)
 	    }
 
 	    inm->inm_source = NULL;
-	    if (IN_LOCAL_GROUP(inm->inm_addr.s_addr)) {
+	    if (IN_LOCAL_GROUP(ntohl(inm->inm_addr.s_addr))) {
 		splx(s);
 		return inm;
 	    }
@@ -1232,7 +1232,7 @@ in_delmulti2(inm, numsrc, ss, mode, final, error)
 		splx(s);
 		return;
 	}
-	if (IN_LOCAL_GROUP(inm->inm_addr.s_addr)) {
+	if (IN_LOCAL_GROUP(ntohl(inm->inm_addr.s_addr))) {
 		if (--ifma->ifma_refcount == 0) {
 
 			/*
@@ -1407,7 +1407,7 @@ in_modmulti2(ap, ifp, numsrc, ss, mode,
 	     * If requested multicast address is local address, update
 	     * the condition, join or leave, based on a requested filter.
 	     */
-	    if (IN_LOCAL_GROUP(inm->inm_addr.s_addr)) {
+	    if (IN_LOCAL_GROUP(ntohl(inm->inm_addr.s_addr))) {
 		if (numsrc != 0) {
 		    splx(s);
 		    *error = EINVAL;
@@ -1504,7 +1504,7 @@ in_modmulti2(ap, ifp, numsrc, ss, mode,
 	     * join a local group address with some filtered address, return.
 	     */
 	    if ((old_num != 0) ||
-	    		(IN_LOCAL_GROUP(ap->s_addr) && numsrc != 0)) {
+		(IN_LOCAL_GROUP(ntohl(inm->inm_addr.s_addr)) && numsrc != 0)) {
 		*error = EINVAL;
 		splx(s);
 		return NULL;
@@ -1563,7 +1563,7 @@ in_modmulti2(ap, ifp, numsrc, ss, mode,
 	    }
 
 	    inm->inm_source = NULL;
-	    if (IN_LOCAL_GROUP(inm->inm_addr.s_addr)) {
+	    if (IN_LOCAL_GROUP(ntohl(inm->inm_addr.s_addr))) {
 		splx(s);
 		return inm;
 	    }
