@@ -1,7 +1,12 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2747 2005/04/14 06:22:31 suz Exp $
+$KAME: CHANGELOG,v 1.2748 2005/04/18 07:40:26 suz Exp $
 
 <200504>
+2005-04-18  SUZUKI, Shinsuke <suz@kame.net>
+	* freebsd5/sys/netinet/igmp.c, in.c, ip_output.c,
+	  kame/sys/netinet/in_msf.c: fixed the byte order of an IPv4 address 
+	  for IN_XXX macros (freebsd-only)
+
 2005-04-14  SUZUKI, Shinsuke <suz@kame.net>
 	* kame/sys/netinet/in_msf.c freebsd5/contrib/pf/net/if_pfsync.c,
 	  freebsd5/sys/netinet/igmp.c, igmp_var.h, in.c, in_pcb.c, in_var.h,
